03-organisms/site/site-header/_site-header.scss
.header {
  &__primary {
    @include wrapper;

    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
    border-bottom: color('gray-300') 1px solid;

    @include breakpoint($large) {
      padding: $space 0;
    }
  }

  &__branding {
    padding: $space 0;
    margin-right: $space;
    padding-left: $space;
    max-width: 300px;

    img {
      margin: ($space) 0;
      width: 300px;
    }
  }

  &__menu {
    align-self: stretch;
    display: flex;

    @include breakpoint($medium) {
      align-self: center;
    }

    > nav {
      display: flex;
    }
  }
}

